--- a/AuthAPI/Philbor.API/appsettings.json
+++ b/AuthAPI/Philbor.API/appsettings.json
@@ -9,7 +9,7 @@
     "DefaultConnection": "Host=localhost;Port=5432;Database=Philbor;Username=postgres;Password=developer@123;"
   },
   "MailSettings": {
-    "Mail": "admin@zobiwebsolutions.com",
+    "Mail": "devj3002@gmail.com",
     "Password": "xgeemokpaxhmeloq",
     "Host": "smtp.gmail.com",
     "Port": 587,
