--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,7 @@ e2e/*.map
 # .NET Core build folders
 bin/
 obj/
-appsetting.json
+appsettings.json
 
 # Common node modules locations
 /node_modules
